--- a/core/app/views/gaku/shared/menu/_admin.html.erb
+++ b/core/app/views/gaku/shared/menu/_admin.html.erb
@@ -41,5 +41,13 @@
       </ul>
     </li>
 
+    <li class="dropdown-submenu" data-hook="system_tools_sub_menu">
+      <a tabindex='-1' href='#'><%= t('admin.system.system_tools') %></a>
+      <ul class="dropdown-menu">
+        <li data-hook="student_presets"><%= link_to t("admin.system.backup"), admin_system_tools_path %></li>
+      </ul>
+    </li>
+
+
   </ul>
 </li>
