Fix so dummy app works again

--- a/core/lib/generators/gaku/install/templates/app/assets/stylesheets/gaku/all.css
+++ b/core/lib/generators/gaku/install/templates/app/assets/stylesheets/gaku/all.css
@@ -6,7 +6,7 @@
 <% if options[:lib_name] == 'gaku' %>
  *= require gaku/gaku_core
 <% else %>
- *= require <%= options[:lib_name].gsub("/", "_") %>
+ *= require gaku/<%= options[:lib_name].gsub("/", "_") %>
 <% end %>
  *= require_self
 */
