--- a/core/app/views/gaku/shared/_global_menu.html.slim
+++ b/core/app/views/gaku/shared/_global_menu.html.slim
@@ -7,7 +7,7 @@ ul.nav#menu
       = t("class_group_management")
       b.caret
     ul.dropdown-menu
-      li= link_to t("menu.class_groups"), class_groups_path
+      li= link_to t("class_groups.list"), class_groups_path
 
 
   li.dropdown
@@ -38,7 +38,7 @@ ul.nav#menu
       
   li.dropdown
     a.dropdown-toggle data-toggle="dropdown" href="#"
-      = t("admin.admin")
+      = t("admin.administration")
       b.caret
     ul.dropdown-menu
       li= link_to t("admin.schools"), admin_schools_path
