fixing translatins in ja first. en will be broken

--- a/core/app/views/gaku/shared/menu/_global.html.erb
+++ b/core/app/views/gaku/shared/menu/_global.html.erb
@@ -7,7 +7,7 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li data-hook="class_groups"><%= link_to t("menu.class_groups"), class_groups_path %></li>
+      <li data-hook="class_groups"><%= link_to t("class_groups.list"), class_groups_path %></li>
     </ul>
   </li>
 
