[refactor] enrollmnet status history

--- a/core/app/views/gaku/students/enrollment_statuses/_history_modal.html.slim
+++ b/core/app/views/gaku/students/enrollment_statuses/_history_modal.html.slim
@@ -13,23 +13,9 @@
 							th To
 							th Notes
 					tbody
-						-@enrollment_status.audits.each_with_index do |audit, i|
+						-@enrollment_status_history.each do |index,audit|
 							tr
-								-if audit == @enrollment_status.audits.first
-									- est = @enrollment_status_types.detect {|type| type.id == audit.audited_changes['enrollment_status_type_id'][0] }
-								-else
-									- est = @enrollment_status_types.detect {|type| type.id == audit.audited_changes['enrollment_status_type_id'][1] }
-								td = est.name
-								td = audit.created_at.strftime("%Y.%m.%d-%H:%M:%S")
-								td = @enrollment_status.audits[i + 1].created_at.strftime("%Y.%m.%d-%H:%M:%S") unless audit == @enrollment_status.audits.last
-								- enrollment_status_notes = []
-								- @enrollment_status.notes.each do |note|
-									-if audit != @enrollment_status.audits.last
-										- if (audit.created_at..@enrollment_status.audits[i + 1].created_at).cover?(note.created_at)
-											- enrollment_status_notes.append note
-									-else
-										- if (audit.created_at..Time.now).cover?(note.created_at)
-											- enrollment_status_notes.append note
-
-								td =enrollment_status_notes.count
-
+								td =audit[:type_name]
+								td =audit[:created_at]
+								td =audit[:ended_at]
+								td =audit[:notes].count
