--- a/core/app/views/gaku/students/_student_form_fields.html.slim
+++ b/core/app/views/gaku/students/_student_form_fields.html.slim
@@ -1,7 +1,7 @@
 .row-fluid
   .span6
     = form.label :class_group_id, t("class"), :class => "control-label"
-    = form.collection_select :class_group_ids, Gaku::ClassGroup.all, :id, :name, {}, {:class => 'span12'}
+    = form.collection_select :class_group_ids, Gaku::ClassGroup.all, :id, :name, {:prompt => t('students.no_class_group')}, {:class => 'span12'}
 .row-fluid
   .span6
     = form.label :surname_reading, t("phonetic_reading") + " ("+t("surname")+")", :class => "control-label pull-left"
