WIP : Refactore locales

--- a/core/app/views/gaku/admin/schools/edit_master.html.slim
+++ b/core/app/views/gaku/admin/schools/edit_master.html.slim
@@ -8,4 +8,4 @@
           .span12
             .span6 
               = submit_button t('schools.save'), :id => 'submit-admin-school-button'
-            = link_to t('Back'), admin_school_details_path , :id => 'back-admin-school-link', :class => 'btn span3'
+            = link_to_back admin_school_details_path , :id => 'back-admin-school-link', :class => 'btn span3'
