--- a/core/app/views/gaku/exams/_course_exams.html.slim
+++ b/core/app/views/gaku/exams/_course_exams.html.slim
@@ -17,8 +17,8 @@ table
       td= exam.max_score
       td= exam.weight
       td= exam.data
-      td= link_to 'Show', exam
-      td= link_to 'Edit', edit_exam_path(exam)
-      td= link_to 'Destroy', exam, confirm: 'Are you sure?', method: :delete
+      td= link_to t(:show), exam
+      td= link_to t(:edit), edit_exam_path(exam)
+      td= ajax_link_to_delete exam
 br/
 = link_to 'New Exam', new_exam_path
