--- a/core/app/views/gaku/exams/_form.html.slim
+++ b/core/app/views/gaku/exams/_form.html.slim
@@ -65,7 +65,7 @@
     / .span9
     /   = f.submit nil, :id => 'submit_button', :class => "span12 btn btn-primary"
     / .span3
-    /   =link_to t('back'), exams_path ,:id => 'submit_button', :class => "span12 btn"
+    /   =link_to_back exams_path ,:id => 'submit_button', :class => "span12 btn"
     .span12
       .span6
         = submit_button t('exams.save'), :id => 'submit-exam-button'
