--- a/core/app/views/gaku/devise/registrations/edit.html.slim
+++ b/core/app/views/gaku/devise/registrations/edit.html.slim
@@ -24,4 +24,4 @@ h2
 h3 Cancel my account
 p
   | Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
-= link_to "Back", :back
+= link_to_back
