--- a/core/app/views/gaku/shared/_delete_modal.html.slim
+++ b/core/app/views/gaku/shared/_delete_modal.html.slim
@@ -1,7 +1,7 @@
 .modal.hide#delete-modal
 	.modal-header
 		button type="button" class="close" data-dismiss="modal" ×
-		h3 = t('Delete')
+		h3 = t(:delete)
 	.modal-body
 		.delete_button style='text-align:center'
-			=link_to t('Delete'), target, :method => :delete, :class => 'btn btn-danger', :data => {:confirm => t('confirm_delete')}
+			=link_to t(:delete), target, :method => :delete, :class => 'btn btn-danger', :data => {:confirm => t('confirm_delete')}
