add auto_progress to admission phase state

--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/_admission_phase_modal.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/_admission_phase_modal.html.slim
@@ -31,6 +31,9 @@
               = state_form.label t('admission_phase_states.can_admit')
               = state_form.check_box :can_admit
             .row-fluid
+              = state_form.label t('admission_phase_states.auto_progress')
+              = state_form.check_box :auto_progress
+            .row-fluid
               = state_form.label t('admission_phase_states.auto_admit')
               = state_form.check_box :auto_admit
             .row-fluid
