--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/admission_phase_states/_admission_phase_state_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/admission_phase_states/_admission_phase_state_fields.html.slim
@@ -7,6 +7,10 @@ td =state.name
   td.vm-tc = image_tag 'check.png'
 - else
   td
+- if state.auto_progress
+  td.vm-tc = image_tag 'check.png'
+- else
+  td
 - if state.auto_admit
   td.vm-tc = image_tag 'check.png'
 - else
