--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/_form.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/_form.html.slim
@@ -17,6 +17,8 @@
           = state_form.check_box :can_progress
           = state_form.label t('admission_phase_states.can_admit')
           = state_form.check_box :can_admit
+          = state_form.label t('admission_phase_states.auto_progress')
+          = state_form.check_box :auto_progress
           = state_form.label t('admission_phase_states.auto_admit')
           = state_form.check_box :auto_admit
           = state_form.link_to_remove t('admission_phase_states.remove')
