WIP fix grading : test

--- a/core/app/views/gaku/exams/grading.html.slim
+++ b/core/app/views/gaku/exams/grading.html.slim
@@ -41,4 +41,4 @@ coffee:
       if fixH > $(window).height() - $(".exam_grid").offset().top - 40
         fixH = $(window).height() - $(".exam_grid").offset().top - 40
       $('.exam_grid').tablefix({width: fixW, height: fixH, fixRows: 2, fixCols: 3})
-    tableSizeFix()
+    #tableSizeFix()
