--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/admission_phase_states/_admission_phase_states_modal.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/admission_phase_states/_admission_phase_states_modal.html.slim
@@ -8,6 +8,8 @@
       table#admin-admission-method-admission-phase-states-index.index.table.table-striped.table-bordered.table-condensed
         thead
           tr
+            th.btn-inverse style="width:28px"
+              i.icon-white.icon-home
             th.btn-inverse =t('admission_phase_states.singular')
             th.btn-inverse =t('admission_phase_states.can_progress')
             th.btn-inverse =t('admission_phase_states.can_admit')
