WIP : students and class_groups partially done

--- a/core/app/views/gaku/class_groups/_form.html.slim
+++ b/core/app/views/gaku/class_groups/_form.html.slim
@@ -8,7 +8,7 @@
         - @class_group.errors.full_messages.each do |msg|
           li= msg
   - if class_group_form.object.new_record?
-    b= t('class_groups.new')
+    b= t('class_group.new')
   .row-fluid.mt-l
     .span12.well
       .row-fluid
