--- a/core/app/views/gaku/class_groups/destroy.js.erb
+++ b/core/app/views/gaku/class_groups/destroy.js.erb
@@ -1,2 +1,2 @@
-$('.class-groups-count').html("<%= print_count(@class_groups_count - 1, t('class_group.list')) %>");
+$('.class-groups-count').html("<%= print_count(@count-1, t_class_group_list) %>");
 showNotice("<%= render_flash %>");
