--- a/core/app/views/gaku/class_groups/index.html.slim
+++ b/core/app/views/gaku/class_groups/index.html.slim
@@ -5,7 +5,7 @@
       #new-class-group.hide
       .pull-left 
         h4.mt-xs.mb-0.class-groups-count 
-          = print_count(@class_groups.count, t('class_group.list'))
+          = print_count(@count, t_class_group_list)
       .pull-right
         = ajax_link_to_new t('class_group.new'), new_class_group_path,:id => "new-class-group-link"
     .row-fluid
