--- a/core/app/views/gaku/students/guardians/addresses/_address_modal.html.slim
+++ b/core/app/views/gaku/students/guardians/addresses/_address_modal.html.slim
@@ -4,7 +4,7 @@
       .modal-header
         button.close type="button" data-dismiss="modal"
           'x
-        h3 =t("addresses.edit")
+        h3 = t('address.edit')
       .modal-body
         .row-fluid
           .validation-error
