--- a/core/app/views/gaku/class_groups/courses/_errors_modal.html.slim
+++ b/core/app/views/gaku/class_groups/courses/_errors_modal.html.slim
@@ -8,4 +8,4 @@
         - errors.full_messages.each do |msg|
           li= msg
 
-    = link_to t('.cancel', :default => t("ok")), '#', :class => 'btn', :'data-dismiss' => "modal"
+    = link_to_cancel
