--- a/core/app/views/gaku/class_groups/semesters/_semesters.html.slim
+++ b/core/app/views/gaku/class_groups/semesters/_semesters.html.slim
@@ -5,7 +5,7 @@
     = render 'gaku/class_groups/semesters/form'
   .pull-left
     h4.h4-vm.class-group-semesters-count 
-      =print_count(@class_group.semesters.count, t("semester.list"))
+      =print_count(@class_group.semesters.count, t_semester_list)
   .pull-right
     = ajax_link_to_new t('semester.add'), new_class_group_semester_path(:class_group_id => @class_group.id), :id => 'new-class-group-semester-link'
 .row-fluid
