--- a/core/app/views/gaku/class_groups/semesters/create.js.erb
+++ b/core/app/views/gaku/class_groups/semesters/create.js.erb
@@ -6,6 +6,6 @@ showNotice("<%= render_flash %>");
 	$('#new-class-group-semester').slideToggle();
 	$('#new-class-group-semester-form-errors').html('');
   $('#new-class-group-semester-link').show();
-  $('#class-group-semesters-tab-link').html("<%= print_count(@count+1, t_plural) %>");
-  $('.class-group-semesters-count').html("<%= print_count(@count+1, t_list) %>");
+  $('#class-group-semesters-tab-link').html("<%= print_count(@count+1, t_semester_plural) %>");
+  $('.class-group-semesters-count').html("<%= print_count(@count+1, t_semester_list) %>");
 <% end %>
