--- a/core/app/views/gaku/class_groups/semesters/destroy.js.erb
+++ b/core/app/views/gaku/class_groups/semesters/destroy.js.erb
@@ -1,3 +1,3 @@
 showNotice("<%= render_flash %>");
-$('#class-group-semesters-tab-link').html("<%= print_count(@count-1, t_plural) %>");
-$('.class-group-semesters-count').html("<%= print_count(@count-1, t_list) %>");
+$('#class-group-semesters-tab-link').html("<%= print_count(@count-1, t_semester_plural) %>");
+$('.class-group-semesters-count').html("<%= print_count(@count-1, t_semester_list) %>");
