--- a/core/app/views/gaku/class_groups/show.html.slim
+++ b/core/app/views/gaku/class_groups/show.html.slim
@@ -23,7 +23,7 @@
           ul.nav.nav-tabs
             li#class_group_students_tab.active
               a#class-group-enrollments-tab-link data-toggle="tab" href="#class_group_enrollments"
-                = print_count(@class_group.class_group_enrollments.count, t('class_group_enrollment.list'))
+                = print_count(@class_group.class_group_enrollments.count, t('student.plural'))
             li
               a#class-group-semesters-tab-link data-toggle="tab" href="#semesters"
                 = print_count(@class_group.semesters.count, t('semester.plural'))
