--- a/core/app/views/gaku/students/addresses/create.js.erb
+++ b/core/app/views/gaku/students/addresses/create.js.erb
@@ -7,6 +7,6 @@ $('#student-addresses-index tbody').append('<%= render_js_partial("address", {:a
 $('#new-student-address').slideToggle();
 $('#new-student-address-link').show();
 
-$('#student-addresses-tab-link').html('<%= print_count(@student.addresses.count, t('address.plural')) %>');
-$('.student-addresses-count').html('<%= print_count(@student.addresses.count, t('address.list')) %>');
+$('#student-addresses-tab-link').html('<%= print_count(@count+1, t_address_plural) %>');
+$('.student-addresses-count').html('<%= print_count(@count+1, t_address_list) %>');
 showNotice("<%= render_flash %>");
