--- a/core/app/views/gaku/students/addresses/destroy.js.erb
+++ b/core/app/views/gaku/students/addresses/destroy.js.erb
@@ -1,5 +1,5 @@
-$("#student-addresses-tab-link").html("<%= print_count(@student.addresses.count, t('address.plural')) %>");
-$(".student-addresses-count").html("<%= print_count(@student.addresses.count, t('address.list')) %>");
+$("#student-addresses-tab-link").html("<%= print_count(@count-1, t_address_plural) %>");
+$(".student-addresses-count").html("<%= print_count(@count-1, t_address_list) %>");
 showNotice("<%= render_flash %>");
 
 <%- unless @student.addresses.blank? %>
