--- a/core/app/views/gaku/students/contacts/destroy.js.erb
+++ b/core/app/views/gaku/students/contacts/destroy.js.erb
@@ -1,5 +1,5 @@
 showNotice("<%= render_flash %>");
-$('.student-contacts-count').html("<%= print_count(@student.contacts.count, t('contact.list')) %>");
+$('.student-contacts-count').html("<%= print_count(@count, t_contact_list) %>");
 
 <%- unless @student.contacts.blank? %>
 	$('#student-contacts-index').find('#contact-<%= @student.contacts.first.id %> td.primary-button a').addClass('btn-primary');
