--- a/core/app/views/gaku/students/guardians/addresses/_addresses.html.slim
+++ b/core/app/views/gaku/students/guardians/addresses/_addresses.html.slim
@@ -3,7 +3,7 @@
   .row-fluid
     .pull-left
       h4.h4-vm.student-guardian-addresses-count
-        = print_count(@guardian.addresses.count, t('address.list'))
+        = print_count(@guardian.addresses.count, t_address_list)
     .pull-right
       = ajax_link_to_new t('address.add'), new_student_guardian_address_path(@student, @guardian), :id => 'new-student-guardian-address-link'
 
