--- a/core/app/views/gaku/students/guardians/addresses/create.js.erb
+++ b/core/app/views/gaku/students/guardians/addresses/create.js.erb
@@ -5,4 +5,4 @@ $('#new-student-guardian-address form')[0].reset();
 $('#new-student-guardian-address-link').show();
 
 showNotice("<%= render_flash %>");
-$('.student-guardian-addresses-count').html('<%= print_count(@guardian.addresses.count, t('address.list')) %>');
+$('.student-guardian-addresses-count').html('<%= print_count(@count+1, t_address_list) %>');
