--- a/core/app/views/gaku/students/guardians/contacts/destroy.js.erb
+++ b/core/app/views/gaku/students/guardians/contacts/destroy.js.erb
@@ -3,4 +3,4 @@
 <% end %>
 
 showNotice("<%= render_flash %>");
-$('.student-guardian-contacts-count').html("<%= print_count(@guardian.contacts.count, t('contact.list')) %>");
+$('.student-guardian-contacts-count').html("<%= print_count(@count-1, t_contact_list) %>");
