--- a/core/app/views/gaku/students/guardians/destroy.js.erb
+++ b/core/app/views/gaku/students/guardians/destroy.js.erb
@@ -1,3 +1,3 @@
-$('#student-guardians-tab-link').html("<%= print_count(@student.guardians.count, t('guardian.plural')) %>");
-$('.student-guardians-count').html("<%= print_count(@student.guardians.count, t('guardian.list')) %>");
+$('#student-guardians-tab-link').html("<%= print_count(@count-1, t_guardian_plural) %>");
+$('.student-guardians-count').html("<%= print_count(@count-1, t_guardian_list) %>");
 showNotice("<%= render_flash %>");
