--- a/core/app/views/gaku/exams/show.html.slim
+++ b/core/app/views/gaku/exams/show.html.slim
@@ -3,7 +3,7 @@
   .span10
     .row-fluid
       .span12
-        h3= t('exams.show')
+        h3= t('exam.show')
     .row-fluid
       .span12
         hr/
