--- a/core/app/views/gaku/shared/menu/_global.html.erb
+++ b/core/app/views/gaku/shared/menu/_global.html.erb
@@ -18,7 +18,7 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li data-hook="syllabuses"><%= link_to t("syllabuses.plural"), syllabuses_path %></li>
+      <li data-hook="syllabuses"><%= link_to t("syllabus.plural"), syllabuses_path %></li>
       <li data-hook="courses"><%= link_to t("course.plural"), courses_path %></li>
       <li data-hook="course_groups"><%= link_to t('course_groups.course_groups'), course_groups_path %></li>
     </ul>
@@ -31,7 +31,7 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li data-hook="exams"><%= link_to t("exams.plural"), exams_path %></li>
+      <li data-hook="exams"><%= link_to t('exam.plural'), exams_path %></li>
     </ul>
   </li>
 
