--- a/core/app/views/gaku/syllabuses/_syllabus_modal.html.slim
+++ b/core/app/views/gaku/syllabuses/_syllabus_modal.html.slim
@@ -1,6 +1,6 @@
 #syllabus-modal.modal.hide
   .modal-header
     button type="button" class="close" data-dismiss="modal" ×
-    h1 Edit Syllabus
+    h1 = t('syllabus.edit')
   .modal-body
     =render 'form'
