--- a/core/app/views/gaku/syllabuses/exam_syllabuses/create.js.erb
+++ b/core/app/views/gaku/syllabuses/exam_syllabuses/create.js.erb
@@ -5,7 +5,7 @@
 	$('#new-existing-exam').slideToggle();
 	$('#new-existing-exam-link').show()
 
-	$('.exams-count').html('<%= print_count(@syllabus.exams.count, t("exams.list")) %>');
+	$('.exams-count').html('<%= print_count(@count, t_exam_list) %>');
   $('#syllabus-exams-index tbody').append('<%= render_js_partial("gaku/syllabuses/exams/exam", {:exam_syllabus => @syllabus.exam_syllabuses.last}) %>');
 	showNotice("<%= render_flash %>");
 <% end %>
