--- a/core/app/views/gaku/syllabuses/new.html.slim
+++ b/core/app/views/gaku/syllabuses/new.html.slim
@@ -3,7 +3,7 @@
   .span10
     .row-fluid
       .span12
-        h3= t('syllabuses.new')
+        h3= t('syllabus.new')
     .row-fluid
       .span12
         hr/
