--- a/core/app/views/gaku/exams/exam_portions/_exam_portion_form.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_exam_portion_form.html.slim
@@ -1,29 +1,29 @@
 = form_for @exam, :url => create_exam_portion_exam_path(:id => @exam), :remote => true do |f|
-  = f.fields_for :exam_portions do |ep_form| 
+  = f.fields_for :exam_portions do |ep_form|
     - if ep_form.object.new_record?
       .row-fluid
         .span12.well
           .span12.well
             .row-fluid
               .span9
-                = ep_form.label t 'exam_portions.name'
-                = ep_form.text_field :name, :class => "validate[required] span12", :value => t('exams.exam')
+                = ep_form.label t('exam_portion.name')
+                = ep_form.text_field :name, :class => "validate[required] span12", :value => t('exam.singular')
               .span3
-                = ep_form.label t 'exam_portions.weight'
+                = ep_form.label t('exam_portion.weight')
                 = ep_form.number_field :weight, :class => "span12"
             .row-fluid
               .span6
-                = ep_form.label t 'exam_portions.problem_count'
+                = ep_form.label t('exam_portion.problem_count')
                 = ep_form.number_field :problem_count, :class => "validate[custom[integer],min[0]] span12"
               .span6
-                = ep_form.label t 'exam_portions.max_score'
+                = ep_form.label t('exam_portion.max_score')
                 = ep_form.number_field :max_score, :class => "validate[required,custom[integer],min[0]] span12", :value =>  100
             .row-fluid
               .span6
-                = ep_form.label t 'exam_portions.description'
+                = ep_form.label t('exam_portion.description')
                 = ep_form.text_area :description, :class => "span12", :size => "0x2"
               .span6
-                = ep_form.label t 'exam_portions.adjustments'
+                = ep_form.label t('exam_portion.adjustments')
                 = ep_form.text_area :adjustments, :class => "span12", :size => "0x2"
           .row-fluid
             = ep_form.submit nil, :class => "span6 btn btn-primary", :id => 'submit-exam-exam-portion-button'
