--- a/core/app/views/gaku/students/guardians/addresses/_addresses.html.slim
+++ b/core/app/views/gaku/students/guardians/addresses/_addresses.html.slim
@@ -21,7 +21,7 @@
               th.btn-inverse = t('address.city')
               th.btn-inverse = t('address.address1')
               th.btn-inverse = t('address.address2')
-              th.btn-info style="width:61px" =t 'manage'
+              th.btn-info style="width:61px" = t('manage')
           tbody
             =render :partial => 'gaku/students/guardians/addresses/address', :collection => @guardian.addresses, :as => 'address', :locals => {:primary_address => @primary_address}
-br/   
+br/
