--- a/core/app/views/gaku/syllabuses/_form.html.slim
+++ b/core/app/views/gaku/syllabuses/_form.html.slim
@@ -7,24 +7,24 @@
       ul
         - @syllabus.errors.full_messages.each do |msg|
           li= msg
- 
+
   .row-fluid
     .span12.well
       .row-fluid
         .span4
-          = syllabus_form.label t('syllabuses.name')
+          = syllabus_form.label t('syllabus.name')
           = syllabus_form.text_field :name, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
         .span4
-          = syllabus_form.label t('syllabuses.code')
+          = syllabus_form.label t('syllabus.code')
           = syllabus_form.text_field :code, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
         .span4
-          = syllabus_form.label t('syllabuses.credits')
+          = syllabus_form.label t('syllabus.credits')
           = syllabus_form.number_field :credits, :class => "validate[custom[integer],min[0]] span12", "data-prompt-position" => "bottomRight:5"
       .row-fluid
-        = syllabus_form.label t('syllabuses.description')
+        = syllabus_form.label t('syllabus.description')
         = syllabus_form.text_area :description, :class => "span12", :size => "0x5"
       .row-fluid
         .span12
           .span6
-            = submit_button t('syllabuses.save'), :id => 'submit-syllabus-button'
+            = submit_button t('syllabus.save'), :id => 'submit-syllabus-button'
           = link_to_cancel :id => "cancel-syllabus-link"
