--- a/core/app/views/gaku/syllabuses/assignments/_assignments.html.slim
+++ b/core/app/views/gaku/syllabuses/assignments/_assignments.html.slim
@@ -1,19 +1,19 @@
 - if @syllabus.assignments.any?
   #syllabus-assignments
-    b= t('assignments.count')
+    b= t('assignment.count')
     |:
     #syllabus-assignments-count
       = @syllabus.assignments.count
     p
-      b= t('assignments.list')
+      b= t('assignment.list')
 
     table#syllabus-assignments-index
       tbody
         tr
-          th= t'assignments.name'
-          th= t 'assignments.description'
-          th= t 'assignments.max_score'
+          th= t('assignment.name')
+          th= t'(assignment.description')
+          th= t('assignment.max_score')
         = render :partial => 'syllabuses/assignments/assignment', :collection => @syllabus.assignments, :as => :assignment
-          
-- else 
-  p= t('notice.no_assignments')
+
+- else
+  p= t('notice.no_resource_assign_first', :resource => t('assignment.plural'))
