--- a/core/app/views/gaku/syllabuses/assignments/_form.html.slim
+++ b/core/app/views/gaku/syllabuses/assignments/_form.html.slim
@@ -1,17 +1,17 @@
 = form_for @syllabus, :url => create_assignment_syllabus_path(:id => @syllabus), :remote => true do |f|
-  = f.fields_for :assignments do |assignment_form| 
+  = f.fields_for :assignments do |assignment_form|
     - if assignment_form.object.new_record?
       .field
-        = assignment_form.label t 'assignments.name'
+        = assignment_form.label t('assignment.name')
         br/
         = assignment_form.text_field :name
       .field
-        = assignment_form.label t 'assignments.description'
+        = assignment_form.label t('assignment.description')
         br/
         = assignment_form.text_area :description
       .field
-        = assignment_form.label t 'assignments.max_score'
+        = assignment_form.label t('assignment.max_score')
         br/
         = assignment_form.number_field :max_score
 
-  = f.submit t('assignments.add')
+  = f.submit t('assignment.add')
