--- a/core/app/views/gaku/syllabuses/destroy.js.erb
+++ b/core/app/views/gaku/syllabuses/destroy.js.erb
@@ -1,2 +1,2 @@
 showNotice("<%= render_flash %>");
-$('.syllabuses-count').html('<%= print_count(@syllabuses_count - 1, t("syllabuses.list")) %>');
+$('.syllabuses-count').html('<%= print_count(@count-1, t_syllabus_list) %>');
