--- a/core/app/views/gaku/syllabuses/show.html.slim
+++ b/core/app/views/gaku/syllabuses/show.html.slim
@@ -3,7 +3,7 @@
   .span10
     .row-fluid
       .span12
-        h3= t('syllabuses.show')
+        h3= t('syllabus.show')
     .row-fluid
       .span12
         hr/
@@ -12,10 +12,10 @@
         table.table.table-condensed.table-striped.table-bordered
           thead
             tr
-              th =t("syllabuses.code")
-              th =t("syllabuses.name")
-              th =t("syllabuses.credits")
-              th =t("syllabuses.description")
+              th = t('syllabus.code')
+              th = t('syllabus.name')
+              th = t('syllabus.credits')
+              th = t('syllabus.description')
           tbody
             tr class="syllabus-#{@syllabus.id}"
               = render 'gaku/shared/fields/syllabus_fields', :syllabus => @syllabus
@@ -25,13 +25,13 @@
           #syllabus-exams
             .row-fluid
               .pull-left
-                h4.mt-xs.mb-0.exams-count 
-                  = print_count(@syllabus.exams.count, t("exams.list"))
+                h4.mt-xs.mb-0.exams-count
+                  = print_count(@syllabus.exams.count, t_exam_list)
               .pull-right
-                = link_to ("<i class='icon-white icon-plus'></i> " + t('exams.new')).html_safe, '', :id => 'new-syllabus-exam-link', :class => "btn btn-primary mr-s", :remote => true
+                = ajax_link_to_new t('exam.new'), '', :id => 'new-syllabus-exam-link'
 
-                = link_to ("<i class='icon-white icon-plus'></i> " + t('syllabuses.add_existing_exam')).html_safe, '', :id => 'new-existing-exam-link', :class => "btn btn-primary", :remote => true
-            
+                = ajax_link_to_new t('exam.add_existing'), '', :id => 'new-existing-exam-link'
+
             .row-fluid
               .span12
                 #new-existing-exam-errors
@@ -50,7 +50,7 @@
           #syllabus-assigmnents
             = render 'gaku/syllabuses/assignments/assignments'
           #new-syllabus-assignment
-            = link_to t('assignments.new'), create_syllabus_assignment_path(@syllabus), { :id => 'new-course-assignment-link', :class => 'btn'}
+            = link_to t('assignment.new'), create_syllabus_assignment_path(@syllabus), { :id => 'new-course-assignment-link', :class => 'btn'}
           #new-syllabus-assignment-form*{ 'style' => 'display:none;'}
             =render 'gaku/syllabuses/assignments/form'
     .row-fluid
