--- a/core/app/views/gaku/courses/show.html.slim
+++ b/core/app/views/gaku/courses/show.html.slim
@@ -1,11 +1,11 @@
-- content_for :title, t("courses.show")
+- content_for :title, t('course.show')
 
 .row-fluid
   .span1
   .span10
     .row-fluid
       .pull-left
-        h4.mb-0 = t("courses.show")
+        h4.mb-0 = t('course.show')
     .row-fluid
       .span12
         hr/
@@ -15,16 +15,16 @@
             table.table.table-striped.table-bordered.table-condensed.course-table
               thead
                 tr
-                  th.btn-inverse =t('courses.code')
+                  th.btn-inverse = t('course.code')
                   - if @course.syllabus
-                    th.btn-inverse =t('combined_code')
-                    th.btn-inverse =t("syllabus")
+                    th.btn-inverse = t('course.combined_code')
+                    th.btn-inverse = t('syllabus.singular')
               tbody
                 tr
-                  td =@course.code
+                  td = @course.code
                   - if @course.syllabus
-                    td =@course.syllabus.code
-                    td =@course.syllabus.name
+                    td = @course.syllabus.code
+                    td = @course.syllabus.name
         .row-fluid
           .span12
             hr/
@@ -33,13 +33,13 @@
             .tabbable.tabs-right
               ul.nav.nav-tabs
                 li.active
-                  a#new-course-enrollment-tab-link data-toggle="tab" href="#course-enrollments" 
-                    = print_count(@course.students.count, t("course_enrollments.enrollments"))
+                  a#new-course-enrollment-tab-link data-toggle="tab" href="#course-enrollments"
+                    = print_count(@course.students.count, t('student.plural'))
                 li
-                  a#new-course-assignment-tab-link data-toggle="tab" href="#course-assignments" =t("course_enrollments.assignments")
+                  a#new-course-assignment-tab-link data-toggle="tab" href="#course-assignments" = t('assignment.plural')
                 li
-                  a#new-course-exam-link data-toggle="tab" href="#course-exams" 
-                    = !@course.syllabus.nil? ? print_count(@course.syllabus.exams.count, t("exams.plural")) : t("exams.plural")
+                  a#new-course-exam-link data-toggle="tab" href="#course-exams"
+                    = !@course.syllabus.nil? ? print_count(@course.syllabus.exams.count, t('exam.plural')) : t('exam.plural')
               .tab-content
                 #course-enrollments.tab-pane.active
                   = render :partial => "gaku/courses/enrollments/enrollments"
