--- a/core/app/views/gaku/courses/destroy.js.erb
+++ b/core/app/views/gaku/courses/destroy.js.erb
@@ -1,3 +1,3 @@
-$('.courses-count').html('<%= print_count(@courses_count - 1, t("courses.list")) %>');
+$('.courses-count').html('<%= print_count(@count-1, t_course_list) %>');
 showNotice("<%= render_flash %>");
 
