--- a/core/app/views/gaku/courses/enrollments/class_groups/enroll.js.erb
+++ b/core/app/views/gaku/courses/enrollments/class_groups/enroll.js.erb
@@ -10,7 +10,7 @@
   $('#new-course-class-group-link').show();
   $('#new-course-class-group').slideToggle();
 
-  $('#new-course-enrollment-tab-link').html('<%= print_count(@course.students.count, t("course_enrollments.enrollments")) %>');
-  $('.course-students-count').html('<%= print_count(@course.students.count, t("students.list")) %>');
+  $('#new-course-enrollment-tab-link').html('<%= print_count(@course.students.count, t_student_plural) %>');
+  $('.course-students-count').html('<%= print_count(@course.students.count, t_student_list) %>');
 <% end %>
 showNotice("<%= render_flash %>");
