--- a/core/app/views/gaku/courses/exams/_exams.html.slim
+++ b/core/app/views/gaku/courses/exams/_exams.html.slim
@@ -4,17 +4,17 @@
 			  thead
 			    tr
 			      th*{"class" => "btn-inverse"}
-			      	= t("exams.exam_name")
+			      	= t('exam.name')
 			      th.btn-info style="width:200px" = t(:manage)
 			  tbody
 			    - @course.syllabus.exams.each do |exam|
 			    	tr
 			    		td = exam.name
 			    		td
-			      		= link_to ('<i class="icon-white icon-pencil"></i> ' + t("grades.grading")).html_safe, "#{request.fullpath}/exams/#{exam.id}/grading", :class => "span3 btn btn-primary grading_link", :params => { :course_id => @course.id, :exam_id => exam.id }
+			      		= link_to ('<i class="icon-white icon-pencil"></i> ' + t('grade.grading')).html_safe, "#{request.fullpath}/exams/#{exam.id}/grading", :class => "span3 btn btn-primary grading_link", :params => { :course_id => @course.id, :exam_id => exam.id }
 .row-fluid
   .span12
     hr
 .row-fluid
   - if @course.syllabus and @course.syllabus.exams.any?
-    = link_to ('<i class="icon-white icon-list"></i> ' + t("grades.all_exams")).html_safe, "#{request.fullpath}/exams/grading", :class => "span12 btn btn-success"
+    = link_to ('<i class="icon-white icon-list"></i> ' + t("grade.all_exams")).html_safe, "#{request.fullpath}/exams/grading", :class => "span12 btn btn-success"
